; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_rebar.c_REBAR_FindBandToGrow.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_rebar.c_REBAR_FindBandToGrow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, i32 }

@RBBS_FIXEDSIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [57 x i8] c"Extra space for row [%d..%d) should be added to band %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_4__* (i32*, i64, i64)* @REBAR_FindBandToGrow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_4__* @REBAR_FindBandToGrow(i32* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %7, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = call %struct.TYPE_4__* @REBAR_GetBand(i32* %9, i64 %10)
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %7, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = load i64, i64* %6, align 8
  %16 = call i64 @prev_visible(i32* %14, i64 %15)
  store i64 %16, i64* %8, align 8
  br label %17

17:                                               ; preds = %40, %3
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* %5, align 8
  %20 = icmp sge i64 %18, %19
  br i1 %20, label %21, label %44

21:                                               ; preds = %17
  %22 = load i32*, i32** %4, align 8
  %23 = load i64, i64* %8, align 8
  %24 = call %struct.TYPE_4__* @REBAR_GetBand(i32* %22, i64 %23)
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* %7, align 8
  %28 = icmp sgt i64 %26, %27
  br i1 %28, label %29, label %39

29:                                               ; preds = %21
  %30 = load i32*, i32** %4, align 8
  %31 = load i64, i64* %8, align 8
  %32 = call %struct.TYPE_4__* @REBAR_GetBand(i32* %30, i64 %31)
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 8
  %35 = load i32, i32* @RBBS_FIXEDSIZE, align 4
  %36 = and i32 %34, %35
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %39, label %38

38:                                               ; preds = %29
  br label %44

39:                                               ; preds = %29, %21
  br label %40

40:                                               ; preds = %39
  %41 = load i32*, i32** %4, align 8
  %42 = load i64, i64* %8, align 8
  %43 = call i64 @prev_visible(i32* %41, i64 %42)
  store i64 %43, i64* %8, align 8
  br label %17

44:                                               ; preds = %38, %17
  %45 = load i64, i64* %8, align 8
  %46 = load i64, i64* %5, align 8
  %47 = icmp slt i64 %45, %46
  br i1 %47, label %48, label %71

48:                                               ; preds = %44
  %49 = load i32*, i32** %4, align 8
  %50 = load i64, i64* %6, align 8
  %51 = call i64 @prev_visible(i32* %49, i64 %50)
  store i64 %51, i64* %8, align 8
  br label %52

52:                                               ; preds = %66, %48
  %53 = load i64, i64* %8, align 8
  %54 = load i64, i64* %5, align 8
  %55 = icmp sge i64 %53, %54
  br i1 %55, label %56, label %70

56:                                               ; preds = %52
  %57 = load i32*, i32** %4, align 8
  %58 = load i64, i64* %8, align 8
  %59 = call %struct.TYPE_4__* @REBAR_GetBand(i32* %57, i64 %58)
  %60 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %59, i32 0, i32 0
  %61 = load i64, i64* %60, align 8
  %62 = load i64, i64* %7, align 8
  %63 = icmp eq i64 %61, %62
  br i1 %63, label %64, label %65

64:                                               ; preds = %56
  br label %70

65:                                               ; preds = %56
  br label %66

66:                                               ; preds = %65
  %67 = load i32*, i32** %4, align 8
  %68 = load i64, i64* %8, align 8
  %69 = call i64 @prev_visible(i32* %67, i64 %68)
  store i64 %69, i64* %8, align 8
  br label %52

70:                                               ; preds = %64, %52
  br label %71

71:                                               ; preds = %70, %44
  %72 = load i64, i64* %5, align 8
  %73 = load i64, i64* %6, align 8
  %74 = load i64, i64* %8, align 8
  %75 = call i32 @TRACE(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0), i64 %72, i64 %73, i64 %74)
  %76 = load i32*, i32** %4, align 8
  %77 = load i64, i64* %8, align 8
  %78 = call %struct.TYPE_4__* @REBAR_GetBand(i32* %76, i64 %77)
  ret %struct.TYPE_4__* %78
}

declare dso_local %struct.TYPE_4__* @REBAR_GetBand(i32*, i64) #1

declare dso_local i64 @prev_visible(i32*, i64) #1

declare dso_local i32 @TRACE(i8*, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
